# Cognitive-Tree-Search-2-

./: CHANGELOG.md  LIMITATIONS.md  MODEL_CARD.md  README.md  REPRODUCIBILITY.md  REVIEWER_FAQ.md
anonymous_submission_neurips2026/cts_neurips2026/: .gitignore  CHANGELOG.md  LICENSE  LIMITATIONS.md  MODEL_CARD.md  NOTICE  README.md  REPRODUCIBILITY.md  REVIEWER_FAQ.md  pyproject.toml
anonymous_submission_neurips2026/cts_neurips2026/configs/: README.md  ablation_no_ach.yaml  ablation_static_5ht.yaml  data_paths.yaml  default.yaml  experiment_paper_protocol.yaml  paper_parity.yaml
anonymous_submission_neurips2026/cts_neurips2026/cts/: __init__.py  types.py
anonymous_submission_neurips2026/cts_neurips2026/results/: LOCAL_HARDWARE_SNAPSHOT.txt  REPRO_ENV.json  RUN_MANIFEST.json  math500_result.json  table2_isoflop_mock.json
anonymous_submission_neurips2026/cts_neurips2026/scripts/: _d12_final_check.py  _reviewer_local_audit.py  _torch_test.bat  aggregate_nu_table19.py  cloud_setup.sh  compare_to_paper_table2.py  download_all_benchmarks.py  download_experiment_data.py  log_repro_environment.py  make_anonymous_submission.py  measure_hybrid_kv.py  profile_kv_measured.py  replicate_neurips_2026.sh  reviewer_walkthrough.py  run_ablations.py  run_arc_agi_text.py  run_contamination_screen.py  run_cts_eval_full.py  run_cts_local_gemma.py  run_eval_subprocess.py  run_full_pipeline_final.py  run_full_training_and_eval.py  run_full_training_stack.py  run_gpu_experiments.py  run_gsm8k.py  run_humaneval.py  run_math500.py  run_mcts_episode_mock.py  run_mcts_puct_once.py  (+25 more)
(+253 files in other folders)
